made the first page and adding api

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
           فودگردی پیدا کنید
         </h2>
         <div class="w-[60%] h-[25%] flex justify-center items-start flex-col">
-          <h3 class="w-[40%] h-[20%] font-extrabold text-xl lett">
+          <h3 class="w-[70%] h-[20%] font-extrabold text-xl lett">
             ماجراجویی غذایی خودت و شروع کن!
           </h3>
           <div class="w-full h-[50%]">
@@ -85,7 +85,9 @@
                 type="text"
                 placeholder="اسم غذا به انگلیسی..."
                 class="w-[40%] h-[80%]"
-              /><button class="w-[20%] h-[60%] rounded-lg -text--box -bg--btn">
+              />
+              <button class="w-[20%] h-[60%] rounded-lg -text--box -bg--btn"
+              id="search_btn">
                 جستجو
               </button>
             </div>
@@ -135,5 +137,6 @@
         </div>
       </div>
     </div>
+    <script src="./main.js" defer></script>
   </body>
 </html>
