--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="h-full w-[70%] flex justify-center items-center">
-        <ul class="w-full h-full flex flex-row items-center justify-around">
+        <ul class="w-full h-full flex flex-row gap-12 items-center">
           <li
             class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
           >
@@ -55,7 +55,7 @@
     </nav>
     <div class="w-full h-[90vh] flex justify-center items-center flex-row">
       <div
-        class="w-[30%] h-[80%] flex justify-end items-center -bg--btn border creative-border"
+        class="w-[30%] h-[80%] flex justify-end items-center -bg--btn rounded-creative border-solid"
       >
         <img src="/assets/chef.png" alt="chef png" />
       </div>
@@ -86,8 +86,10 @@
                 placeholder="اسم غذا به انگلیسی..."
                 class="w-[40%] h-[80%]"
               />
-              <button class="w-[20%] h-[60%] rounded-lg -text--box -bg--btn"
-              id="search_btn">
+              <button
+                class="w-[20%] h-[60%] rounded-lg -text--box -bg--btn"
+                id="search_btn"
+              >
                 جستجو
               </button>
             </div>
@@ -137,6 +139,6 @@
         </div>
       </div>
     </div>
-    <script src="./main.js" defer></script>
+    <script src="./script.js"></script>
   </body>
 </html>
