--- a/src/index.html
+++ b/src/index.html
@@ -16,39 +16,35 @@
       <div class="h-full w-[70%] flex justify-center items-center">
         <ul class="w-full h-full flex flex-row gap-12 items-center">
           <li
-            class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
+            class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text "
+           id="li1">
             اسم
           </li>
           <li
             class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
+            id="li2">
             حرف
           </li>
           <li
             class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
+            id="li3">
             رندوم
           </li>
-          <li
-            class="w-[10%] cursor-pointer text-xl font-serif font-extrabold rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
-            دسته بندی ها
-          </li>
+          
           <li
             class="w-[10%] cursor-pointer font-extrabold text-xl font-serif rounded-lg text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
+            id="li4">
             مواد اصلی
           </li>
           <li
             class="w-[10%] cursor-pointer font-extrabold rounded-lg text-xl font-serif text-center -border--text hover:-bg--btn hover:-text--box hover:-border--text"
-          >
+            id="li5">
             کشور
           </li>
           <li
             class="w-[10%] cursor-pointer font-extrabold rounded-lg text-center text-xl font-serif hover:-bg--btn hover:-text--box hover:-border--text"
-          >
-            فیلتر دسته بندی
+            id="li6">
+             دسته بندی
           </li>
         </ul>
       </div>
@@ -69,7 +65,7 @@
           فودگردی پیدا کنید
         </h2>
         <div class="w-[60%] h-[25%] flex justify-center items-start flex-col">
-          <h3 class="w-[70%] h-[20%] font-extrabold text-xl lett">
+          <h3 class="w-[70%] h-[20%] font-extrabold text-xl " id="change_txt">
             ماجراجویی غذایی خودت و شروع کن!
           </h3>
           <div class="w-full h-[50%]">
@@ -83,6 +79,7 @@
               />
               <input
                 type="text"
+                name="food"
                 placeholder="اسم غذا به انگلیسی..."
                 class="w-[40%] h-[80%]"
               />
