fetching info for different menu items

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,9 @@
           </h3>
           <div class="w-full h-[50%]">
             
-            <div
+            <form
               class="w-[70%] h-[70%] -bg--box rounded-full flex justify-around items-center flex-row"
+              id="form"
             >
               
             <h3 class="show font-serif font-semibold" id="lock_txt">یکی از گزینه های بالا رو انتخاب کن</h3>
@@ -94,12 +95,13 @@
               <button
                 class="w-[20%] h-[60%] rounded-lg -text--box -bg--btn hide items-center justify-center"
                 id="search_btn"
+                type="submit"
               >
                 جستجو
               </button>
 
 
-            </div>
+            </form>
           </div>
         </div>
         <div class="w-[70%] h-[25%] flex justify-evenly items-center">
