some bug fixes and changed the menu part

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
       </div>
     </div>
     <!-- part if menu was more than 1 item -->
-    <div id="search_item" class="w-[70vw] h-[100vh] items-center justify-center flex-col  hide">
+    <div id="search_item" class="w-[70vw] h-auto items-center justify-center flex-col  hide">
 
 
     </div>
