--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>فودگردی</title>
   </head>
   <body class="-bg--bkg flex justify-center items-center flex-col">
-    <nav class="w-full h-[10vh] justify-center items-center flex-row show">
+    <nav class="w-full h-[10vh] justify-center items-center flex-row show" id="nav">
       <div class="h-full w-[30%] flex justify-center items-center">
         <h1 class="font-extrabold text-3xl font-mono" id="logo">فودگردی</h1>
       </div>
@@ -109,41 +109,41 @@
         </div>
         <div class="w-[70%] h-[25%] flex justify-evenly items-center">
           <div
-            class="w-[20%] h-[90%] -bg--box rounded-lg flex justify-evenly items-center flex-col pt-5"
+            class="card"
           >
-            <img src="" alt="" class="w-[80%] h-[50%]" id="random_itm_img_1" />
+            <img src="" alt="" class="card_img" id="random_itm_img_1"/>
             <h2
-              class="w-[80%] h-[50%] text-center flex justify-center items-center text-[0.8rem] font-sans font-semibold"
+              class="card_txt"
               id="random_itm_txt_1"
             ></h2>
           </div>
 
           <div
-            class="w-[20%] h-[90%] -bg--box rounded-lg flex justify-center items-center flex-col pt-5"
+            class="card"
           >
-            <img src="" alt="" class="w-[80%] h-[50%]" id="random_itm_img_2" />
+            <img src="" alt="" class="card_img" id="random_itm_img_2" />
             <h2
-              class="w-[80%] h-[50%] text-center flex justify-center items-center font-sans text-[0.8rem] font-semibold"
+              class="card_txt"
               id="random_itm_txt_2"
             ></h2>
           </div>
 
           <div
-            class="w-[20%] h-[90%] -bg--box rounded-lg flex justify-center items-center flex-col pt-5"
+            class="card"
           >
-            <img src="" alt="" class="w-[80%] h-[50%]" id="random_itm_img_3" />
+            <img src="" alt="" class="card_img" id="random_itm_img_3" />
             <h2
-              class="w-[80%] h-[50%] text-center flex justify-center items-center font-sans text-[0.8rem] font-semibold"
+              class="card_txt"
               id="random_itm_txt_3"
             ></h2>
           </div>
 
           <div
-            class="w-[20%] h-[90%] -bg--box rounded-lg flex justify-center items-center flex-col pt-5"
+            class="card"
           >
-            <img src="" alt="" class="w-[80%] h-[50%]" id="random_itm_img_4" />
+            <img src="" alt="" class="card_img" id="random_itm_img_4" />
             <h2
-              class="w-[100%] h-[50%] text-center flex justify-center items-center font-sans text-[0.8rem] font-semibold"
+              class="card_txt"
               id="random_itm_txt_4"
             ></h2>
           </div>
@@ -162,15 +162,19 @@
       class="w-full h-auto flex-col justify-center items-center hide"
     >
       <div
-        class="w-[100vw] h-[10vh] items-center px-20 pt-5 cursor-pointer show"
+        class="w-[100vw] h-[10vh] items-center px-20 pt-5 cursor-pointer "
         id="recipe_container_top"
       >
         <img src="/assets/back.png" alt="return" class="w-8 h-8" id="return" />
       </div>
       <div
         id="recipe_container_bot"
-        class="w-[70%] h-[80vh] -bg--btn justify-center items-center p-5 m-5 show"
-      ></div>
+        class="w-[70%] h-auto -bg--box flex justify-center items-center flex-col p-5 m-5 rounded-[40px]"
+      >
+      <div class=" w-[70%] h-[50vh] flex justify-center items-center rounded-3xl -bg--bkg show" id="recipe_img"><img src="" alt="recipe img" class="w-[90%] h-[80%] rounded-[40px]"></div>
+      <div class="w-[70%] h-[10vh]  -bg--bkg rounded-lg p-10 m-10 font-mono justify-center text-[2em] show" id="recipe_name_container"><h1 id="recipe_name">hello world</h1></div>
+      <div class="w-[70%] h-[60vh] p-10 show" id="recipe_ingredients_container"></div>
+    </div>
     </div>
 
     <script src="./script.js"></script>
